# isoteric_bot

./: .gitignore  Dockerfile  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 2025_12_24_1418-d15f3da38dbd_create_tables.py  2025_12_24_1615-d2369a85ca80_add_all_tables.py  2025_12_26_2142-8ecde74ea4d0_fixed_tablenames.py  2026_01_01_1705-1406069786ec_payment_statuses_corrected.py  2026_01_06_0011-8cda14a63c92_added_latest_daily_card_to_user.py  2026_01_16_2112-3bce99b99cd2_allowed_user_status_none.py  2026_01_17_1544-7e5a08b08723_new_table_for_bonuses.py  2026_01_24_1256-95663d03d16a_gen_enum.py  2026_01_24_1318-81713241669c_status_mf.py  2026_01_27_0206-702eca23867a_uq_user_bonus.py
app_v1/: main.py
app_v1/core/: config.py
app_v1/db/: database.py
app_v1/keyboards/: __init__.py  kbd_builder.py
app_v1/middlewares/: __init__.py  database_middleware.py
app_v1/prompts/: __init__.py  templates.py
app_v1/routers/: __init__.py  admin_hand.py  ai_portraits_hand.py  bio_hand.py  daily_card.py  deposit_hand.py  is_user_subbed_hand.py  lk_hand.py  maintenance_hand.py  readings_hand.py  start_hand.py  witch_hand.py
app_v1/schemas/: __init__.py  ai_portrait_sch.py  ai_portraits_map.yml  bio_sch.py  bonuses_sch.py  daily_card_sch.py  email_sch.py  error_answer.py  lk_sch.py  maintenance_sch.py  master_sch.py  payment_sch.py  readings_map.yml  readings_sch.py
app_v1/services/: __init__.py  admin_stats.py  arcana_serv.py  fastapi_webhook_server.py  first_start.py  google_ai.py  message_animation.py  openai.py  payment_poller.py  ssl_cert_create.py  (+4 more)
(+27 files in other folders)
